--- a/collab-practical/src/styles/global.scss
+++ b/collab-practical/src/styles/global.scss
@@ -16,3 +16,9 @@ body {
 .gray-text {
   color: #999fae;
 }
+
+.primary-button {
+  font-size: 1.8rem;
+  padding: 2.2rem 3rem 5rem;
+  border-radius: 2.4rem;
+}
