--- a/collab-practical/src/components/homePage/HomePage.scss
+++ b/collab-practical/src/components/homePage/HomePage.scss
@@ -1,20 +1,19 @@
 @import "../../styles/variables";
 
 .home-page-wrapper {
-  height: 1vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  position: relative;
 }
 .feature-text {
   height: 500px;
   padding: 18rem;
+  color: $text-dark;
 }
-.feature-title {
-  font-size: 2.2rem;
-  font-weight: 600;
-}
+
 .section-title {
   font-size: 8rem;
+  letter-spacing: 0.1rem;
   font-weight: 500;
 }
 .section-title-last-letter {
@@ -29,11 +28,12 @@
   font-size: 2rem;
 }
 
+//
+
 .prototype-wrapper {
   margin: 15rem 35rem;
   background: url("../../Assets/Group 272.svg");
   background-repeat: no-repeat;
-  height: 100vh;
   width: 124rem;
   position: relative;
 }
@@ -73,11 +73,18 @@
   left: 100rem;
 }
 
-.plans-wrapper {
+//
+
+.plans-page-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+  .pink-circle {
+    position: absolute;
+    top: 16.9rem;
+    left: 130.5rem;
+  }
 }
 
 .plan-cards-wrapper {
@@ -85,4 +92,35 @@
   display: flex;
   flex-direction: row;
   gap: 4rem;
+}
+
+.objectives-page-wrapper {
+  background: url("../../Assets/Line bg.svg");
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin: 0 20rem;
+}
+.objectives-description-container {
+  padding: 10rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.objectives-description {
+  display: flex;
+  flex-direction: column;
+  // justify-content: space-between;
+}
+.title-small {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #c75c6f;
+}
+
+.objective-list-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding-bottom: 10rem;
 }
