--- a/collab-practical/src/components/PlanCard/PlanCard.scss
+++ b/collab-practical/src/components/PlanCard/PlanCard.scss
@@ -58,3 +58,56 @@
   background-color: #fab8c4;
   color: black;
 }
+
+@media (max-width: 102.4rem) {
+  .plan-card-wrapper {
+    padding: 3rem;
+    height: 52rem;
+    width: 27.6rem;
+    border-radius: 2.76rem;
+  }
+
+  .card-user-group {
+    font-size: 1.6rem;
+    margin: 0;
+  }
+  .card-title {
+    font-size: 4.5rem;
+    font-weight: 500;
+  }
+
+  .card-price {
+    font-size: 2rem;
+    font-weight: 600;
+  }
+
+  .plan-feature-item {
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 37.5rem) {
+  .plan-card-wrapper {
+    padding: 2rem;
+    height: 52rem;
+    width: 27.6rem;
+    border-radius: 2.76rem;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 0.1rem solid #ebebf0;
+    position: relative;
+    .card-price {
+      color: #5956e9;
+    }
+    display: none;
+  }
+  .plan-card-wrapper-highlighted {
+    display: flex;
+    background-color: #5956e9;
+    border: none;
+    color: #ffffff;
+    .card-price {
+      color: #ffffff;
+    }
+  }
+}
