--- a/collab-practical/src/components/homePage/HomePage.scss
+++ b/collab-practical/src/components/homePage/HomePage.scss
@@ -1,315 +1,202 @@
 @import "../../styles/variables";
 
-.home-page-wrapper {
-  // display: grid;
-  // grid-template-columns: 1fr 1fr;
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  align-items: center;
-  justify-content: space-between;
-  padding: 8rem 16rem;
-}
-
-.feature-text {
-  // height: 500px;
-  // padding: 18rem;
-  color: $text-dark;
-}
-
-.section-title {
-  font-size: 8rem;
-  letter-spacing: 0.1rem;
-  font-weight: 500;
-}
-.section-title-last-letter {
-  color: $primary-blue;
-}
-
-.feature-svg {
-  // height: 50rem;
-  // max-width: 100%;
-}
-.feature-decription {
-  // padding-bottom: 3rem;
-  font-size: 2rem;
-}
-
-//
-
-.prototype-wrapper {
-  margin: 6rem 35rem;
-  background: url("../../Assets/Group 272.svg");
-  background-repeat: no-repeat;
-  width: 124rem;
-  position: relative;
-}
-
-.prototype-text {
-  display: block;
-  height: 50rem;
-  width: 50rem;
-  padding: 12rem;
-}
-
-.prototype-decription {
-  font-size: 1.8rem;
-  color: #292930;
-}
-
-.pink-circle-1 {
-  position: absolute;
-  top: 17.2rem;
-  left: 55rem;
-}
-
-.pink-circle-2 {
-  position: absolute;
-  top: 21.8rem;
-  left: 119rem;
-}
-
-.yellow-circle {
-  display: block;
-  position: absolute;
-  top: 62.8rem;
-  left: 24rem;
-}
-
-.blue-circle {
-  position: absolute;
-  top: 9rem;
-  left: 100rem;
-}
-
-//
-
-//
-
-.plans-page-wrapper {
-  margin: 5rem auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1rem;
-  .pink-circle {
-    position: absolute;
-    top: 16.9rem;
-    left: 130.5rem;
-  }
-}
-
-.plan-cards-wrapper {
-  margin-top: 7.2rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 4rem;
-}
-
-///
-///
-///
-///
-///
-///
-
-///
-//
-
-.objectives-page-wrapper {
-  background: url("../../Assets/Line bg.svg");
-  background-repeat: no-repeat;
-  // height: 100vh;
-  margin: 0 20rem;
-}
-.objectives-description-container {
-  padding: 10rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 8rem;
-}
-.objectives-description {
-  display: flex;
-  flex-direction: column;
-  // justify-content: space-between;
-}
-
-.title {
-  width: 70%;
-}
-.title-small {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #c75c6f;
-}
-
-.title-desc {
-  font-size: 2rem;
-  width: 50%;
-}
-// .lamp-icon {
-//   display: none;
+// .home-page-wrapper {
+//   // display: grid;
+//   // grid-template-columns: 1fr 1fr;
+//   display: flex;
+//   flex-direction: row;
+//   position: relative;
+//   align-items: center;
+//   justify-content: space-between;
+//   padding: 8rem 16rem;
 // }
 
-.objective-list-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  padding-bottom: 10rem;
-}
+// .feature-text {
+//   // height: 500px;
+//   // padding: 18rem;
+//   color: $text-dark;
+// }
 
-@media (max-width: 102.4rem) {
-  .home-page-wrapper {
-    // display: grid;
-    // grid-template-columns: 1fr 1fr;
-    // position: relative;
-    padding: 10rem;
-  }
+// .section-title {
+//   font-size: 8rem;
+//   letter-spacing: 0.1rem;
+//   font-weight: 500;
+// }
+// .section-title-last-letter {
+//   color: $primary-blue;
+// }
 
-  //
+// .feature-svg {
+//   // height: 50rem;
+//   // max-width: 100%;
+// }
+// .feature-decription {
+//   // padding-bottom: 3rem;
+//   font-size: 2rem;
+// }
 
-  .section-title {
-    font-size: 6.8rem;
-    letter-spacing: 0.1rem;
-    font-weight: 500;
-  }
+//
 
-  //
+// .prototype-wrapper {
+//   margin: 6rem 35rem;
+//   background: url("../../Assets/Group 272.svg");
+//   background-repeat: no-repeat;
+//   width: 124rem;
+//   position: relative;
+// }
 
-  .prototype-wrapper {
-    width: 102.4rem;
-    margin: 4rem;
-  }
+// .prototype-text {
+//   display: block;
+//   height: 50rem;
+//   width: 50rem;
+//   padding: 12rem;
+// }
 
-  .prototype-text {
-    display: block;
-    height: 50rem;
-    width: 25rem;
-    padding: 8rem;
-  }
-  .pink-circle-1 {
-    position: absolute;
-    top: 17.2rem;
-    left: 55rem;
-  }
+// .prototype-decription {
+//   font-size: 1.8rem;
+//   color: #292930;
+// }
 
-  .pink-circle-2 {
-    display: none;
-    position: absolute;
-    top: 21.8rem;
-    left: 119rem;
-  }
+// .pink-circle-1 {
+//   position: absolute;
+//   top: 17.2rem;
+//   left: 55rem;
+// }
 
-  .yellow-circle {
-    display: none;
-    position: absolute;
-    top: 62.8rem;
-    left: 24rem;
-  }
+// .pink-circle-2 {
+//   position: absolute;
+//   top: 21.8rem;
+//   left: 119rem;
+// }
 
-  .blue-circle {
-    position: absolute;
-    top: 9rem;
-    left: 100rem;
-  }
+// .yellow-circle {
+//   display: block;
+//   position: absolute;
+//   top: 62.8rem;
+//   left: 24rem;
+// }
 
-  .objectives-page-wrapper {
-    background: url("../../Assets/Line bg.svg");
-    background-repeat: no-repeat;
-    height: 100vh;
-    margin: 0 0;
-  }
-  .objectives-description-container {
-    padding: 10rem;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: space-between;
-  }
-  .objectives-description {
-    display: flex;
-    flex-direction: column;
-  }
-  .title-small {
-    font-size: 2rem;
-    font-weight: 600;
-    color: #c75c6f;
-  }
+// .blue-circle {
+//   position: absolute;
+//   top: 9rem;
+//   left: 100rem;
+// }
 
-  .objective-list-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    padding-bottom: 10rem;
-  }
-}
+//
+
+//
+
+// .plans-page-wrapper {
+//   margin: 5rem auto;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   padding: 1rem;
+//   .pink-circle {
+//     position: absolute;
+//     top: 16.9rem;
+//     left: 130.5rem;
+//   }
+// }
+
+// .plan-cards-wrapper {
+//   margin-top: 7.2rem;
+//   display: flex;
+//   flex-direction: row;
+//   align-items: center;
+//   gap: 4rem;
+// }
+
+///
+///
+///
+///
+///
+///
+
+///
+//
+
+// .objectives-page-wrapper {
+//   background: url("../../Assets/Line bg.svg");
+//   background-repeat: no-repeat;
+//   // height: 100vh;
+//   margin: 0 20rem;
+// }
+// .objectives-description-container {
+//   padding: 10rem;
+//   display: flex;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: center;
+//   margin-bottom: 8rem;
+// }
+// .objectives-description {
+//   display: flex;
+//   flex-direction: column;
+//   // justify-content: space-between;
+// }
+
+// .title {
+//   width: 70%;
+// }
+// .title-small {
+//   font-size: 2rem;
+//   font-weight: 600;
+//   color: #c75c6f;
+// }
+
+// .title-desc {
+//   font-size: 2rem;
+//   width: 50%;
+// }
+// // .lamp-icon {
+// //   display: none;
+// // }
+
+// .objective-list-wrapper {
+//   display: grid;
+//   grid-template-columns: 1fr 1fr;
+//   grid-template-rows: 1fr 1fr;
+//   padding-bottom: 10rem;
+// }
+
+// @media (max-width: 102.4rem) {
+//   //
+
+//   .objectives-page-wrapper {
+//     background: url("../../Assets/Line bg.svg");
+//     background-repeat: no-repeat;
+//     height: 100vh;
+//     margin: 0 0;
+//   }
+//   .objectives-description-container {
+//     padding: 10rem;
+//     display: flex;
+//     flex-direction: row;
+//     align-items: flex-end;
+//     justify-content: space-between;
+//   }
+//   .objectives-description {
+//     display: flex;
+//     flex-direction: column;
+//   }
+//   .title-small {
+//     font-size: 2rem;
+//     font-weight: 600;
+//     color: #c75c6f;
+//   }
+
+//   .objective-list-wrapper {
+//     display: grid;
+//     grid-template-columns: 1fr 1fr;
+//     grid-template-rows: 1fr 1fr;
+//     padding-bottom: 10rem;
+//   }
+// }
 
 @media (max-width: 37.5rem) {
-  .home-page-wrapper {
-    padding: 2rem 4rem;
-    flex-direction: column;
-  }
-  // .feature-svg {
-  //   height: 50rem;
-  //   width: 37.5px;
-  // }
-
-  .section-title {
-    font-size: 4.8rem;
-    letter-spacing: 0.1rem;
-    font-weight: 500;
-  }
-
   //
-
-  .prototype-wrapper {
-    margin: 4rem;
-    width: 40.5rem;
-    background: url("../../Assets/Grey background.svg");
-    background-repeat: no-repeat;
-  }
-
-  // .section-title {
-  //   text-align: center;
-  // }
-  .prototype-text::before {
-    content: "";
-    background-image: url("../../Assets/Mask Group.png");
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 2rem;
-    left: 10rem;
-    bottom: 0;
-    right: 0;
-    z-index: 2;
-  }
-  .prototype-text {
-    height: 50rem;
-    width: 25rem;
-    padding: 30rem 8rem 0;
-    text-align: center;
-  }
-
-  .prototype-decription {
-    color: #6d7381;
-  }
-
-  //
-
-  .plans-page-wrapper {
-    text-align: center;
-    padding: 0 4rem;
-  }
-
-  .plan-cards-wrapper {
-    flex-direction: column;
-  }
-  .lamp-icon {
-    display: none;
-  }
 
   //
 
