--- a/collab-practical/src/styles/global.scss
+++ b/collab-practical/src/styles/global.scss
@@ -29,6 +29,13 @@ p {
   padding: 2.2rem 3rem 5rem;
   border-radius: 2.4rem;
 }
+
+.section-title {
+  font-size: 8rem;
+  letter-spacing: 0.1rem;
+  font-weight: 500;
+}
+
 .list-item {
   display: flex;
   gap: 1rem;
