--- a/collab-practical/src/pages/featuresPage/FeaturesPage.scss
+++ b/collab-practical/src/pages/featuresPage/FeaturesPage.scss
@@ -14,6 +14,7 @@
 .feature-text {
   // height: 500px;
   // padding: 18rem;
+  max-width: 100%;
   color: $text-dark;
 }
 
@@ -22,23 +23,16 @@
 }
 
 .feature-svg {
-  // height: 50rem;
-  // max-width: 100%;
+  max-width: 100%;
 }
 .feature-decription {
-  // padding-bottom: 3rem;
   font-size: 2rem;
 }
 
 @media (max-width: 102.4rem) {
   .home-page-wrapper {
-    // display: grid;
-    // grid-template-columns: 1fr 1fr;
-    // position: relative;
     padding: 10rem;
   }
-
-  //
 
   .section-title {
     font-size: 6.8rem;
@@ -53,8 +47,6 @@
     flex-direction: column;
   }
   .feature-svg {
-    height: 50rem;
-    width: 37.5rem;
     img {
       width: 100%;
     }
