--- a/collab-practical/src/pages/plansPage/PlansPage.scss
+++ b/collab-practical/src/pages/plansPage/PlansPage.scss
@@ -6,8 +6,8 @@
   padding: 1rem;
   .pink-circle {
     position: absolute;
-    top: 16.9rem;
-    left: 130.5rem;
+    top: 16.9%;
+    left: 130.5%;
   }
 }
 
@@ -18,18 +18,24 @@
   gap: 4rem;
 }
 
+@media (max-width: 80.4rem) {
+  .plan-cards-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+  }
+}
 @media (max-width: 37.5rem) {
-  //
-
-  //
-
   .plans-page-wrapper {
     text-align: center;
     padding: 0 4rem;
   }
 
   .plan-cards-wrapper {
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 4rem;
+    margin: 5rem;
   }
   .lamp-icon {
     display: none;
