Minor bug fixes in responsive design

--- a/collab-practical/src/components/objectiveItem/ObjectiveItem.scss
+++ b/collab-practical/src/components/objectiveItem/ObjectiveItem.scss
@@ -30,7 +30,11 @@
   // margin-left: 16rem;
 }
 
-@media (max-width: 37.5rem) {
+.expand-text {
+  cursor: pointer;
+}
+
+@media (max-width: 34rem) {
   .objective-item-wrapper {
     border: none;
     display: flex;
