--- a/collab-practical/src/pages/objectivesPage/ObjectivesPage.scss
+++ b/collab-practical/src/pages/objectivesPage/ObjectivesPage.scss
@@ -28,11 +28,11 @@
 
 .title-desc {
   font-size: 2rem;
-  width: 50%;
+  max-width: 70%;
 }
-// .lamp-icon {
-//   display: none;
-// }
+.lamp-icon img {
+  width: 100%;
+}
 
 .objective-list-wrapper {
   display: grid;
@@ -41,7 +41,7 @@
   padding-bottom: 10rem;
 }
 
-@media (max-width: 102.4rem) {
+@media (max-width: 64rem) {
   //
 
   .objectives-page-wrapper {
@@ -75,14 +75,9 @@
   }
 }
 
-@media (max-width: 37.5rem) {
-  //
-
-  //
-
+@media (max-width: 24rem) {
   .objectives-description-container {
     padding: 4rem;
-    // align-items: center;
     text-align: center;
   }
   .objectives-description {
