--- a/collab-practical/src/styles/global.scss
+++ b/collab-practical/src/styles/global.scss
@@ -31,7 +31,7 @@ p {
 }
 
 .section-title {
-  font-size: 8rem;
+  font-size: 6rem;
   letter-spacing: 0.1rem;
   font-weight: 500;
 }
@@ -50,4 +50,34 @@ p {
 .bold-text {
   font-size: 2rem;
   font-weight: 600;
+}
+
+@media (max-width: 64rem) {
+  html {
+    font-size: 50.5%;
+  }
+}
+
+@media (max-width: 24rem) {
+  html {
+    font-size: 40.5%;
+  }
+
+  .primary-button {
+    font-size: 2rem;
+    padding: 1.8rem 2.6rem 2.6rem;
+    border-radius: 2.4rem;
+  }
+
+  .section-title {
+    font-size: 6rem;
+    letter-spacing: 0.1rem;
+    font-weight: 500;
+  }
+
+  .primary-button {
+    font-size: 1.4rem;
+    padding: 1.6rem 2rem 3rem;
+    border-radius: 1.6rem;
+  }
 }
